--- a/hu-windows-configure-registry-settings.adoc
+++ b/hu-windows-configure-registry-settings.adoc
@@ -1,6 +1,6 @@
 ---
 sidebar: sidebar
-permalink: hu_wuhu_hba_settings.html
+permalink: hu-windows-configure-registry-settings.html
 keywords: windows, host, utilities, 7.1, hba, fibre, channel, SANtricity, netapp, san, host, e-series, platform
 summary: Windows Host Utilities includes an installation program that sets the required Windows registry and HBA parameters so that the Windows host correctly handles the storage system behaviors for ONTAP and E-Series platforms.
 ---
