--- a/nvme-ol-9x.adoc
+++ b/nvme-ol-9x.adoc
@@ -849,3 +849,5 @@ DHHC-1:03:n3F8d+bvxKW/s+lEhqXaOohI2sxrQ9iLutzduuFq49JgdjjaFtTpDSO9kQl/bvZj+Bo3rd
 == Step 8: Review the known issues
 
 There are no known issues.
+
+// 2025 DEC 8, ONTAPDOC3418, Oracle Linux 9.6 release
