--- a/_include/windows/windows-install-whats-next.adoc
+++ b/_include/windows/windows-install-whats-next.adoc
@@ -1,3 +1,3 @@
 == What's next?
 
-link:hu-windows-configure-registry-settings.html[Configure the registry settings for Windows Host Utilities].
+link:hu-wuhu-configuration.html[Learn about the Windows Host Utilities configuration for ONTAP storages]
