--- a/_include/windows/windows-whats-next.adoc
+++ b/_include/windows/windows-whats-next.adoc
@@ -1,3 +1,3 @@
 == What's next?
 
-link:hu-windows-configure-registry-settings.html[Learn about the registry settings for Window Host Utilities].
+link:hu-wuhu-configuration.html[Learn about the Windows Host Utilities configuration for ONTAP storage]
