--- a/hu-luhu-command-reference.adoc
+++ b/hu-luhu-command-reference.adoc
@@ -1,8 +1,8 @@
 ---
 sidebar: sidebar
 permalink: hu-luhu-command-reference.html
-keywords: host utilities, unified, oracle, linux, 7.1, 8.0, netapp, ontap
-summary: Describes how to use the Linux Host Utilities 7.1 with ONTAP
+keywords: host utilities, unified, oracle, linux, 8.0, netapp, ontap
+summary: Describes how to use the Linux Host Utilities with ONTAP storage
 ---
 = Use Linux Host Utilities commands to verify ONTAP storage configuration 
 :hardbreaks:
