--- a/hu_hpux_60_cmd.adoc
+++ b/hu_hpux_60_cmd.adoc
@@ -1,8 +1,8 @@
 ---
 sidebar: sidebar
 permalink: hu_hpux_60_cmd.html
-keywords: host utilities, unified, oracle, linux, 7.1, netapp, ontap
-summary: Describes how to use the Linux Host Utilities 7.1 with ONTAP
+keywords: host utilities, unified, oracle, hp-ux, 6.0, netapp, ontap
+summary: Describes how to use the HP-UX Host Utilities 6.0 with ONTAP
 ---
 = Use HP-UX Host Utilities commands to verify ONTAP storage configuration
 :hardbreaks:
