Add SLES hosts to Veritas

--- a/hu-veritas-9x.adoc
+++ b/hu-veritas-9x.adoc
@@ -13,7 +13,7 @@ summary: Use Linux Host Utilities with Veritas Infoscale 9 for RHEL and Oracle L
 :imagesdir: ./media/
 
 [.lead]
-The Linux Host Utilities software provides management and diagnostic tools for Linux hosts that are connected to ONTAP storage. Use the Linux Host Utilities with Veritas Infoscale 9 for Red Hat Enterprise Linux (RHEL) and Oracle Linux (Red Hat Compatible Kernel based) hosts to support managing FC, FCoE, and iSCSI protocol operations with ONTAP LUNs.
+The Linux Host Utilities software provides management and diagnostic tools for Linux hosts that are connected to ONTAP storage. Use the Linux Host Utilities with Veritas Infoscale 9 for Oracle Linux (Red Hat Compatible Kernel based), Red Hat Enterprise Linux (RHEL), and SUSE Linux Enterprise Server hosts to support managing FC, FCoE, and iSCSI protocol operations with ONTAP LUNs.
 
 include::_include/hu/veritas-enable-san-boot.adoc[]
 
