Apply suggestions from code review
Co-authored-by: Aoife Hegarty <92876203+netapp-aoife@users.noreply.github.com>

--- a/_include/hu/veritas-enable-san-boot.adoc
+++ b/_include/hu/veritas-enable-san-boot.adoc
@@ -5,7 +5,7 @@ You can configure your host to use SAN booting to simplify deployment and improv
 .Before you begin
 * Use the link:https://mysupport.netapp.com/matrix/#welcome[Interoperability Matrix Tool^] to verify that your Linux OS, host bus adapter (HBA), HBA firmware, HBA boot BIOS, and ONTAP version support SAN booting.
 
-* Refer to the Veritas Support Portal (Product Matrix, Platform Lookup, and HCL Matrix) to verify the SAN Boot configuration support and known issues.
+* Refer to the Veritas Support Portal (Product Matrix, Platform Lookup, and HCL Matrix) to verify the SAN boot configuration support and known issues.
 
 .Steps
 
