--- a/hu-veritas-7x.adoc
+++ b/hu-veritas-7x.adoc
@@ -28,7 +28,7 @@ To ensure that VxDMP is set up correctly for your host, you need to verify the V
 NOTE: For heterogenous multipath environments, including Veritas Infoscale, Linux Native Device Mapper, and LVM volume manager, refer to the Veritas Product Administration documentation for the configuration settings.
 
 .Before you begin
-Ensure your configuration meets the system requirements. See the link:https://mysupport.netapp.com/matrix/#welcome[Interoperability Matrix Tool^] and the Veritas HCL Matrix.
+Ensure that your configuration meets the system requirements. See the link:https://mysupport.netapp.com/matrix/#welcome[Interoperability Matrix Tool^] and the Veritas HCL Matrix.
 
 .Steps
 
