--- a/nvme-proxmox-ve-8x.adoc
+++ b/nvme-proxmox-ve-8x.adoc
@@ -1,10 +1,10 @@
 ---
 sidebar: sidebar
-permalink: nvme-proxmox-84.html
+permalink: nvme-proxmox-ve-8x.html
 keywords: nvme, proxmox, linux, red hat, enterprise
-summary: How to Configure NVMe-oF Host for Proxmox 8.4 with ONTAP storage
+summary: How to Configure NVMe-oF Host for Proxmox VE 8x with ONTAP storage
 ---
-= Configure Proxmox 8.4 for NVMe-oF with ONTAP storage
+= Configure Proxmox VE 8x for NVMe-oF with ONTAP storage
 :hardbreaks:
 :toclevels: 1
 :nofooter:
@@ -16,7 +16,7 @@ summary: How to Configure NVMe-oF Host for Proxmox 8.4 with ONTAP storage
 include::_include/nvme/nvme-introduction.adoc[]
 
 .About this task 
-You can use the following support and features with the NVMe-oF host configuration for Proxmox 8.4. You should also review the known limitations before starting the configuration process.
+You can use the following support and features with the NVMe-oF host configuration for Proxmox 8x. You should also review the known limitations before starting the configuration process.
 
 * Support available:
 ** Support for NVMe over TCP (NVMe/TCP) in addition to NVMe over Fibre Channel (NVMe/FC). The NetApp plug-in in the native `nvme-cli` package displays ONTAP details for both NVMe/FC and NVMe/TCP namespaces.
@@ -24,7 +24,7 @@ You can use the following support and features with the NVMe-oF host configurati
 +
 For additional details on supported configurations, see the link:https://mysupport.netapp.com/matrix/[Interoperability Matrix Tool^].
 * Features available:
-** Native NVMe multipathing is always enabled for Proxmox 8.4. 
+** Native NVMe multipathing is always enabled for Proxmox 8x. 
 * Known limitations: 
 ** Avoid issuing the `nvme disconnect-all` command on systems booting from SAN over NVMe-TCP or NVMe-FC namespaces because it disconnects both root and data filesystems and might lead to system instability.
 
@@ -34,11 +34,11 @@ include::_include/nvme/enable-san-booting.adoc[]
 
 == Step 2: Validate software versions
 
-Use the following procedure to validate the minimum supported Proxmox 8.4 software versions.
+Use the following procedure to validate the minimum supported Proxmox 8x software versions.
 
 .Steps
 
-. Install Proxmox 8.4 on the server. After the installation is complete, verify that you are running the specified Proxmox 8.4 kernel: 
+. Install Proxmox 8x on the server. After the installation is complete, verify that you are running the specified Proxmox 8x kernel: 
 +
 [source,cli]
 ----
@@ -63,7 +63,7 @@ include::_include/nvme/nvme-enabling-broadcom-1mb-size.adoc[]
 
 == Step 5: Verify NVMe boot services 
 
-With Proxmox 8.4, the `nvmefc-boot-connections.service` and `nvmf-autoconnect.service` boot services included in the NVMe/FC `nvme-cli` package are automatically enabled when the system boots. 
+With Proxmox 8x, the `nvmefc-boot-connections.service` and `nvmf-autoconnect.service` boot services included in the NVMe/FC `nvme-cli` package are automatically enabled when the system boots. 
 
 After booting completes, verify that the `nvmefc-boot-connections.service` and `nvmf-autoconnect.service` boot services are enabled.
 
