--- a/nvme-rhel-9x.adoc
+++ b/nvme-rhel-9x.adoc
@@ -497,9 +497,7 @@ You should see the following output:
 vi /usr/lib/udev/rules.d/71-nvmf-netapp.rules
 ----
 
-. Find the line that sets iopolicy for the NetApp ONTAP Controller. 
-+
-The following example shows an example rule:
+. Find the line that sets iopolicy for the NetApp ONTAP Controller, as shown in the following example rule: 
 +
 ----
 ACTION=="add", SUBSYSTEM=="nvme-subsystem", ATTR{subsystype}=="nvm", ATTR{model}=="NetApp ONTAP Controller", ATTR{iopolicy}="round-robin"
@@ -533,7 +531,7 @@ You should see the following output:
 queue-depth.
 ----
 
-NOTE: The new iopolicy applies automatically to matching NetApp ONTAP Controller devices. No reboot is required.
+NOTE: The new iopolicy applies automatically to matching NetApp ONTAP Controller devices. You don't need to reboot.
 
 == Step 5: Optionally, enable 1MB I/O for NVMe/FC
 
@@ -608,7 +606,7 @@ You should see the following output:
 Y
 ----
 
-. Verify that the appropriate NVMe-oF settings (such as, model set to NetApp ONTAP Controller and load balancing iopolicy set to round-robin) for the respective ONTAP namespaces correctly reflect on the host:
+. Verify that the appropriate NVMe-oF settings (such as, model set to NetApp ONTAP Controller and load balancing iopolicy set to round-robin) for the respective ONTAP namespaces correctly display on the host:
 
 .. Display the subsystems:
 +
@@ -727,9 +725,12 @@ nvme netapp ontapdevices -o column
 ====
 [subs=+quotes]
 ----
-Device           Vserver                   Subsystem                 Namespace Path                                     NSID UUID                                   Size
----------------- ------------------------- ------------------------- -------------------------------------------------- ---- -------------------------------------- ---------
-/dev/nvme0n1     vs_iscsi_tcp              Nvme1                     /vol/Nvmevol1/ns1                                  1    d8efef7d-4dde-447f-b50e-b2c009298c66   26.84GB
+Device          Vserver         Subsystem   Namespace Path      NSID UUID                                      
+------------    --------        ----------- -----------------   ---- -----                                     
+/dev/nvme0n1    vs_iscsi_tcp    Nvme1       /vol/Nvmevol1/ns1   1    d8efef7d-4dde-447f-b50e-b2c009298c66               
+Size
+-----
+26.84GB
                               
 ----
 ====
